<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.inventorymaterial.InventoryActivity"
    android:stretchColumns="1">
    <TableRow>

        <TextView
            android:id="@+id/txvName"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/tvxName"/>

        <EditText
            android:id="@+id/edtName"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:inputType="text"
            tools:ignore="LabelFor" />

    </TableRow>
    <TableRow>

        <TextView
            android:id="@+id/txvDescrption"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/txvDescription"/>

        <EditText
            android:id="@+id/edtDescription"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:inputType="text"
            tools:ignore="LabelFor" />

    </TableRow>
    <TableRow>

        <TextView
            android:id="@+id/txvDateCreation"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/txvDateCreation"/>
        <EditText
            android:id="@+id/edtDateCreation"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:inputType="date"
            tools:ignore="LabelFor" />

    </TableRow>
    <TableRow>

        <Button
            android:id="@+id/btnChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnChange"
            android:layout_gravity="center"
            android:layout_span="2"/>

    </TableRow>
</TableLayout>
