<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="com.example.inventorymaterial.InventoryActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/edtName"
            android:text="@string/tvxName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="@+id/brrMain"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gdlStart"
            app:layout_constraintTop_toBottomOf="@+id/imgProduct" />

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/imgProduct"
            app:layout_constraintDimensionRatio="3:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/product" />

        <EditText
            android:id="@+id/edtName"
            style="@style/DashboardEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/shape_edittext"
            android:inputType="text"
            android:singleLine="false"
            app:layout_constraintBaseline_toBaselineOf="@+id/txvName"
            app:layout_constraintEnd_toStartOf="@+id/gdlMiddle"
            app:layout_constraintStart_toEndOf="@+id/brrMain" />

        <TextView
            android:id="@+id/txvSerial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/edtSerial"
            android:text="@string/txvSerial"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintEnd_toEndOf="@+id/brrMain"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gdlStart"
            app:layout_constraintTop_toBottomOf="@+id/edtName" />

        <EditText
            android:id="@+id/edtSerial"
            style="@style/DashboardEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/shape_edittext"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/txvSerial"
            app:layout_constraintEnd_toStartOf="@+id/gdlMiddle"
            app:layout_constraintStart_toEndOf="@+id/brrMain" />

        <TextView
            android:id="@+id/txvSeller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/edtSeller"
            android:text="@string/txvSeller"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintEnd_toEndOf="@+id/brrMain"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gdlStart"
            app:layout_constraintTop_toBottomOf="@+id/edtSerial" />

        <EditText
            android:id="@+id/edtSeller"
            style="@style/DashboardEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/shape_edittext"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/txvSeller"
            app:layout_constraintEnd_toStartOf="@+id/gdlMiddle"
            app:layout_constraintStart_toEndOf="@+id/brrMain" />

        <EditText
            android:id="@+id/edtModel"
            style="@style/DashboardEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/shape_edittext"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/txvModel"
            app:layout_constraintEnd_toStartOf="@+id/gdlMiddle"
            app:layout_constraintStart_toEndOf="@+id/brrMain" />

        <TextView
            android:id="@+id/txvModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="34dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/edtModel"
            android:text="@string/txvModel"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintEnd_toEndOf="@+id/brrMain"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gdlStart"
            app:layout_constraintTop_toBottomOf="@+id/edtSeller" />

        <TextView
            android:id="@+id/txvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/txvCategory"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintEnd_toEndOf="@+id/brrMain"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gdlStart"
            app:layout_constraintTop_toBottomOf="@+id/edtModel" />

        <Spinner
            android:id="@+id/spnCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/gdlEnd"
            app:layout_constraintStart_toEndOf="@+id/brrMain"
            app:layout_constraintTop_toTopOf="@+id/txvCategory" />

        <Spinner
            android:id="@+id/spnSubcategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/gdlEnd"
            app:layout_constraintStart_toEndOf="@+id/brrMain"
            app:layout_constraintTop_toTopOf="@+id/txvSubcategory" />

        <Spinner
            android:id="@+id/spnType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/gdlEnd"
            app:layout_constraintStart_toEndOf="@+id/brrMain"
            app:layout_constraintTop_toTopOf="@+id/txvType" />

        <TextView
            android:id="@+id/txvSubcategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/txvSubcategory"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintEnd_toEndOf="@+id/brrMain"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gdlStart"
            app:layout_constraintTop_toBottomOf="@+id/spnCategory" />

        <TextView
            android:id="@+id/txvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/txvType"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintEnd_toEndOf="@+id/brrMain"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gdlStart"
            app:layout_constraintTop_toBottomOf="@+id/spnSubcategory" />

        <TextView
            android:id="@+id/txvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/edtDescription"
            android:text="@string/txvDescription"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintEnd_toEndOf="@+id/brrMain"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/gdlStart"
            app:layout_constraintTop_toBottomOf="@+id/spnType" />

        <EditText
            android:id="@+id/edtDescription"
            style="@style/DashboardEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/shape_edittext"
            android:ems="10"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:labelFor="@id/txvDescription"
            android:lines="3"
            android:maxLines="3"
            android:minLines="3"
            android:singleLine="false"
            app:layout_constraintEnd_toStartOf="@+id/gdlEnd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/brrMain"
            app:layout_constraintTop_toBottomOf="@+id/txvDescription" />

        <TextView
            android:id="@+id/txvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/edtPrice"
            android:text="@string/txvPrice"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintEnd_toEndOf="@+id/brrMain"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gdlStart"
            app:layout_constraintTop_toBottomOf="@+id/edtDescription" />

        <EditText
            android:id="@+id/edtPrice"
            style="@style/DashboardEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/shape_edittext"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/txvPrice"
            app:layout_constraintEnd_toStartOf="@+id/gdlEnd"
            app:layout_constraintStart_toEndOf="@+id/brrMain" />

        <EditText
            android:id="@+id/edtDateCreation"
            style="@style/DashboardEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/shape_edittext"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintBaseline_toBaselineOf="@+id/txvDateCreation"
            app:layout_constraintEnd_toStartOf="@+id/gdlEnd"
            app:layout_constraintStart_toEndOf="@+id/brrMain" />

        <TextView
            android:id="@+id/txvDateCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@id/edtDateCreation"
            android:text="@string/txvDateCreation"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintEnd_toEndOf="@+id/brrMain"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gdlStart"
            app:layout_constraintTop_toBottomOf="@+id/edtPrice" />

        <TextView
            android:id="@+id/txvUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="13dp"
            android:labelFor="@id/edtUrl"
            android:text="@string/txvUrl"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintEnd_toEndOf="@+id/brrMain"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gdlStart"
            app:layout_constraintTop_toBottomOf="@+id/edtDateCreation" />

        <EditText
            android:id="@+id/edtUrl"
            style="@style/DashboardEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/shape_edittext"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/txvUrl"
            app:layout_constraintEnd_toStartOf="@+id/gdlEnd"
            app:layout_constraintStart_toEndOf="@+id/brrUrl" />

        <TextView
            android:id="@+id/txvNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="19dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@+id/edtNotes"
            android:text="@string/txvNotes"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintEnd_toEndOf="@+id/brrMain"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/gdlStart"
            app:layout_constraintTop_toBottomOf="@+id/edtUrl" />

        <EditText
            android:id="@+id/edtNotes"
            style="@style/DashboardEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_edittext"
            android:ems="10"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:labelFor="@id/txvNotes"
            android:lines="8"
            android:maxLines="8"
            android:minLines="8"
            android:singleLine="false"
            app:layout_constraintEnd_toStartOf="@+id/gdlEnd"
            app:layout_constraintStart_toStartOf="@+id/gdlStart"
            app:layout_constraintTop_toBottomOf="@+id/txvNotes" />

        <Space
            android:layout_width="1dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@+id/edtNotes" />

        <android.support.constraint.Guideline
            android:id="@+id/gdlStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <android.support.constraint.Guideline
            android:id="@+id/gdlEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <android.support.constraint.Barrier
            android:id="@+id/brrUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="txvUrl"
            tools:layout_editor_absoluteX="75dp" />

        <android.support.constraint.Barrier
            android:id="@+id/brrMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="txvName,txvSerial,txvSeller,txvModel,txvCategory,txvSubcategory,txvType,txvDescription,txvPrice,txvDateCreation,txvNotes"
            tools:layout_editor_absoluteX="177dp" />

        <android.support.constraint.Guideline
            android:id="@+id/gdlMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <ImageView
            android:id="@+id/imgCodeQR"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/imgCodeQR"
            app:layout_constraintEnd_toStartOf="@+id/gdlEnd"
            app:layout_constraintStart_toStartOf="@+id/gdlMiddle"
            app:layout_constraintTop_toTopOf="@+id/edtSerial"
            app:srcCompat="@drawable/qr" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>


